--- a/General_language.html
+++ b/General_language.html
@@ -43,7 +43,7 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td>房源（Housing Resources）HR
+                    <td style="color: red;">房源（Housing Resources）HR
                         <br>
                     </td>
                     <td>业主登记在公寓的房屋信息</td>
