修改通用语言颜色

--- a/General_language.html
+++ b/General_language.html
@@ -24,7 +24,7 @@
                     <td>对业主委托的房屋进行管理和出租，和租户签订契约的公寓管理平台</td>
                     <td>公寓公司B从小明手中收到房屋A，签订三年业主房屋合同，然后租给了小美。</td>
                 </tr>
-                <tr>
+                <tr style="color: red;">
                     <td>业主房屋管理合同
                         <br>（Proprietor Management Contract）PMC</td>
                     <td>业主同意将房屋交由公寓管理公司管理的合同，约定了时间，资金等内容</td>
@@ -42,8 +42,8 @@
                     <td>生效、作废</td>
                     <td></td>
                 </tr>
-                <tr>
-                    <td style="color: red;">房源（Housing Resources）HR
+                <tr style="color: red;">
+                    <td >房源（Housing Resources）HR
                         <br>
                     </td>
                     <td>业主登记在公寓的房屋信息</td>
@@ -93,7 +93,7 @@
                     <td>租客和公寓之间的签约过程</td>
                     <td></td>
                 </tr>
-                <tr>
+                <tr style="color: red;">
                     <td>租房合同
                         <br>(Tenant Agreement)</td>
                     <td>公寓管理公司和租客之间的契约，租客签约的结果。</td>
@@ -132,19 +132,19 @@
                     <td>公寓管理公司给租客提供可选的额外服务，可能收费，也可能不收费，统称为租期增值服务。</td>
                     <td>维修，保洁等，如上门保洁一次，收费100元。</td>
                 </tr>
-                <tr>
+                <tr style="color: #FF9800;">
                     <td>操作记录
                         <br>(Operation Log)</td>
                     <td>领域对象状态属性变更都会引发操作记录的记录</td>
                     <td>实体房源状态的每次变更，都会新增操作记录，记录的信息就是用一句话来描述下房源状态的上下文</td>
                 </tr>
-                <tr>
+                <tr style="color: #03A9F4;">
                     <td>账单
                         <br>(Bill)</td>
                     <td>对费用的总记录</td>
                     <td>租客和公寓签订租房合同时，约定租期一年，共租金2.4万元</td>
                 </tr>
-                <tr>
+                <tr style="color: #03A9F4;">
                     <td>账单明细
                         <br>(Bill Detail)</td>
                     <td>对费用明细的体现</td>
@@ -163,7 +163,7 @@
                     <td>未打款、已打款</td>
                     <td></td>
                 </tr>
-                <tr>
+                <tr style="color: #FF9800;">
                     <td>结算
                         <br>(Settlement)</td>
                     <td>退租，换房，续租等操作导致租房合同到期时，租客和公寓之间的结算</td>
